# rust-fractal-lab

./: Cargo.toml  LICENSE  README.md  rustfmt-nightly.toml
benches/: sierpinski2.rs
src/: args.rs  forest.rs  ifs.rs  lib.rs  main.rs  support.rs  vertex.rs  wat.rs
src/shader_builder/: mod.rs
src/shader_builder/includes/: colors.glsl  complex.glsl  julia_funcs.glsl  utils.glsl
src/shaders/: geometry.glsl
src/utils/: winit.rs
