[package]
name = "rust-fractal-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
hdrhistogram = "7.5.2"
glium = { version = "0.32.1", path = "../../repos/glium" }
imgui = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
imgui-glium-renderer = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
imgui-winit-support = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
ndarray = "0.15"
once_cell = "1.13"
rand = "0.8"
regex = "1"
ouroboros = "0.15"

[patch.crates-io]
glium = { path = "../../repos/glium" }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "sierpinski2"
path = "benches/sierpinski2.rs"
harness = false