[package]
name = "rust-fractal-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7.5.2"
glium = { git = "https://github.com/introtochaosbook/glium.git", version = "0.32.1", branch = "cpl/read" }
imgui = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
imgui-glium-renderer = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
imgui-winit-support = { git = "https://github.com/introtochaosbook/imgui-rs.git", branch = "cpl/glium-0.32.1" }
ndarray = "0.15"
once_cell = "1.13"
rand = "0.8"
regex = "1"
static_assertions = "1"
strum_macros = "0.24"
ouroboros = "0.15"

[patch.crates-io]
glium = { git = "https://github.com/introtochaosbook/glium.git", version = "0.32.1", branch = "cpl/read" }

